# Password_Manager

./: .gitignore  auto_test.py  cmplib.bat  password_manager.py  sublime.sublime-workspace  test.py  test_data.json
app/: auto_test.py  cli.py  core.py  gui.py
app/lib/: __init__.py  check.py  encryption.py  hash.py  py_lib.pyd  py_util.py
app/lib/compile/: CMakeLists.txt  compile.py
app/lib/compile/src/: check.hpp  io.hpp  math.cpp  math.hpp
data/: Marijn
docs/: TODO.txt  crc_nibble.txt  password manager file structure.vsdx  sublime.txt
lib/: __init__.py  _py_lib.pyd  check.py  encryption.py  hash.py  io.py  py_lib.py  py_lib.pyd  py_lib_wrap.py  py_util.py
lib/compile/: CMakeLists.txt  compile.py  setup.py
lib/compile/int/: encryption.cpp  encryption.py  hash.cpp  hash.py  io.cpp  io.py  py_lib.cpp  py_lib.py
lib/compile/int/Release/int/: _py_lib.cp38-win32.exp  _py_lib.cp38-win32.lib  _py_lib.cp38-win_amd64.exp  _py_lib.cp38-win_amd64.lib
lib/compile/int/Release/src/: _py_lib.cp38-win_amd64.exp  _py_lib.cp38-win_amd64.lib
lib/compile/src/: bind.cpp  check.cpp  check.hpp  encryption.cpp  encryption.hpp  encryption.i  file.cpp  file.hpp  hash.cpp  hash.hpp  hash.i  io.cpp  io.hpp  io.i  py_lib.cpp  py_lib.hpp  py_lib.i
website/: download.html  index.html  info.html
website/css/: download.css  index.css  info.css
